--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- <div class="boom"> -->
         <nav>
-            <img src="28249801-designstyle-breeze-m.png" class="logo">
+            <img src="https://logos.textgiraffe.com/logos/logo-name/28265479-designstyle-breeze-m.png" class="logo">
             <ul>
                 <li><a href=" ">home</a></li>
                 <li><a href=" ">about</a></li>
