--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <p><strong>Developer</strong></p>
         </div>
         <div class="image">
-            <img src="IMG_20220201_192313.JPG" class="me">
+            <img src="IMG_20220201_192313.JPG" class="me" alt="svg image">
         </div>
         
     <!-- </div> -->
