--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <p><strong>Developer</strong></p>
         </div>
         <div class="image">
-            <img src="rishabraj.JPG" class="me">
+            <img src="![rishabraj](https://user-images.githubusercontent.com/97430553/152018343-9a00d884-4f9b-47a6-aba4-be03bc2444e8.jpg)" class="me">
         </div>
         
     <!-- </div> -->
