--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="ac">
         <h2>Achievements</h2><br>
         <ul>
-            <li>May be in parallel universe.</li>
+            <li>To be updated.</li>
         </ul>
     </div>
 
