--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href=" ">home</a></li>
                 <li><a href=" ">about</a></li>
-                <li><a href=" " class="sk">skills</a></li>
-                <li><a href=" " class="lc">contact me</a></li>
+                <li><a href=" ">skills</a></li>
+                <li><a href=" ">contact me</a></li>
             </ul>
         </nav>
         <div class="sonic">
