--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <img src="https://logos.textgiraffe.com/logos/logo-name/28265479-designstyle-breeze-m.png" class="logo">
             <ul>
-                <li><a href=" ">home</a></li>
-                <li><a href=" ">about</a></li>
-                <li><a href=" ">skills</a></li>
-                <li><a href=" ">contact me</a></li>
+                <li><a href="">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#skills">skills</a></li>
+                <li><a href="#connect">contact me</a></li>
             </ul>
         </nav>
-        <div class="sonic">
+        <div class="sonic" id="about">
              <h1>Hi, I'm <span>Rishab Raj</span></h1>
              <p><b>Student at IIIT Bhagalpur</b></p><br>
              <p><strong>Programmer</strong></p><br>
@@ -30,7 +30,7 @@
         </div>
         
     <!-- </div> -->
-    <div class="sk">
+    <div class="sk" id="skills">
         <h2>Skills</h2><br>
         <ul>
             <li>c</li><br>
@@ -55,7 +55,7 @@
         </ul>
     </div>
 
-    <div class="lc">
+    <div class="lc" id="connect">
         <h2>Lets Connect</h2><br>
         <ul>
             <li><a href="https://www.linkedin.com/in/rishab-raj-714512229">Linkedin</a></li><br>
